new beta subscription management
